--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<!DOCTYPE html>
-<html>
-    <body> 
-            <h1> Nothing to see here yet.</h1>
-    </body>
-</html>
+<html> 
+  <head> 
+    <title>Ivan Šimičić</title> 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
+    <link rel="stylesheet" type="text/css" href="index.css">
+  </head> 
+  <body> 
+    <script type="text/javascript" src="index.js"> 
+    </script> 
+    <div id="console"></div> 
+    <script type="text/javascript", src="index2.js">
+    </script>
+  </body> 
+</html> 
